.rsw/rsw.err
[INFO]: 🎯  Checking for the Wasm target...
[INFO]: 🌀  Compiling to Wasm...
   Compiling particles-wasm v0.1.0 (/Users/gilkih/Documents/repos/wasm-particle-life/particles-wasm)
warning: unused import: `Point2`
 --> src/objects/system.rs:7:19
  |
7 | use na::{Vector2, Point2};
  |                   ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `self`
 --> src/objects/system.rs:9:33
  |
9 | use super::particle::{Particle, self};
  |                                 ^^^^

warning: unused `#[macro_use]` import
 --> src/lib.rs:4:1
  |
4 | #[macro_use]
  | ^^^^^^^^^^^^

warning: unused import: `objects::system::System`
 --> src/lib.rs:7:5
  |
7 | use objects::system::System;
  |     ^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> src/objects/system.rs:24:50
   |
24 |             particles.push(Particle::from_random(id as u64, m))
   |                            --------------------- ^^^^^^^^^ expected `u32`, found `u64`
   |                            |
   |                            arguments to this function are incorrect
   |
note: associated function defined here
  --> src/objects/particle.rs:55:12
   |
55 |     pub fn from_random(id: u32, m: usize) -> Self {
   |            ^^^^^^^^^^^ -------  --------
help: you can convert a `u64` to a `u32` and panic if the converted value doesn't fit
   |
24 |             particles.push(Particle::from_random((id as u64).try_into().unwrap(), m))
   |                                                  +         +++++++++++++++++++++

error[E0308]: mismatched types
  --> src/objects/system.rs:29:13
   |
29 |             dt,
   |             ^^ expected `f32`, found `f64`

error[E0308]: mismatched types
  --> src/objects/system.rs:30:13
   |
30 |             r_max,
   |             ^^^^^ expected `f32`, found `f64`

error[E0308]: arguments to this function are incorrect
   --> src/objects/system.rs:31:30
    |
31  |             friction_factor: Self::get_friction_factor(dt, friction_half_life),
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^ --  ------------------ expected `f32`, found `f64`
    |                                                        |
    |                                                        expected `f32`, found `f64`
    |
note: associated function defined here
   --> src/objects/system.rs:126:8
    |
126 |     fn get_friction_factor(dt: f32, friction_half_life: f32) -> f32 {
    |        ^^^^^^^^^^^^^^^^^^^----------

error[E0308]: mismatched types
  --> src/objects/system.rs:34:13
   |
34 |             force_factor,
   |             ^^^^^^^^^^^^ expected `f32`, found `f64`

For more information about this error, try `rustc --explain E0308`.
warning: `particles-wasm` (lib) generated 4 warnings
error: could not compile `particles-wasm` due to 5 previous errors; 4 warnings emitted
Error: Compiling your crate to WebAssembly failed
Caused by: Compiling your crate to WebAssembly failed
Caused by: failed to execute `cargo build`: exited with exit status: 101
  full command: cd "particles-wasm" && "cargo" "build" "--lib" "--target" "wasm32-unknown-unknown"
